--- a/VauxGame/VauxGame.csproj
+++ b/VauxGame/VauxGame.csproj
@@ -44,14 +44,27 @@
     <Reference Include="NVorbis">
       <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\NVorbis.dll</HintPath>
     </Reference>
+    <Reference Include="MonoGame.Extended">
+      <HintPath>..\packages\MonoGame.Extended.0.5.149\lib\MonoGame.Extended.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VauxGame.cs" />
+    <Compile Include="Subjects\ComponentSubject.cs" />
+    <Compile Include="Components\IDrawable.cs" />
+    <Compile Include="Components\Implementations\Cursor.cs" />
+    <Compile Include="Components\IUpdateable.cs" />
+    <Compile Include="Components\IMovable.cs" />
+    <Compile Include="Commands\ICommand.cs" />
+    <Compile Include="Commands\Implementations\MoveCommand.cs" />
+    <Compile Include="Components\Implementations\FpsCounter.cs" />
+    <Compile Include="Components\Implementations\FpsCounterAdvanced.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Icon.png" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -66,4 +79,11 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
+  <ItemGroup>
+    <Folder Include="Subjects\" />
+    <Folder Include="Components\" />
+    <Folder Include="Components\Implementations\" />
+    <Folder Include="Commands\" />
+    <Folder Include="Commands\Implementations\" />
+  </ItemGroup>
 </Project>
