--- a/VauxGame/VauxGame.csproj
+++ b/VauxGame/VauxGame.csproj
@@ -61,6 +61,9 @@
     <Compile Include="Commands\Implementations\MoveCommand.cs" />
     <Compile Include="Components\Implementations\FpsCounter.cs" />
     <Compile Include="Components\Implementations\FpsCounterAdvanced.cs" />
+    <Compile Include="Components\IComponent.cs" />
+    <Compile Include="Components\Enums\ComponentTypeEnum.cs" />
+    <Compile Include="Components\Implementations\WorldComponent.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Icon.png" />
@@ -85,5 +88,6 @@
     <Folder Include="Components\Implementations\" />
     <Folder Include="Commands\" />
     <Folder Include="Commands\Implementations\" />
+    <Folder Include="Components\Enums\" />
   </ItemGroup>
 </Project>
