--- a/VauxGame/VauxGame.csproj
+++ b/VauxGame/VauxGame.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -8,8 +8,9 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>VauxGame</RootNamespace>
     <AssemblyName>VauxGame</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <MonoGamePlatform>DesktopGL</MonoGamePlatform>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,8 +33,12 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=4.1.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.1.1\lib\net45\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MonoGame.Extended, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MonoGame.Extended.0.5.149\lib\MonoGame.Extended.dll</HintPath>
+      <HintPath>..\packages\MonoGame.Extended.0.5.533-beta\lib\MonoGame.Extended.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -50,8 +55,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Behaviors\AnimationBehavior.cs" />
+    <Compile Include="Behaviors\Interfaces\IAnimation.cs" />
+    <Compile Include="Behaviors\Interfaces\IBehavior.cs" />
+    <Compile Include="Behaviors\RunningBackAnimation.cs" />
+    <Compile Include="Behaviors\RunningFrontAnimation.cs" />
+    <Compile Include="Behaviors\RunningLeftAnimation.cs" />
+    <Compile Include="Behaviors\IdleAnimation.cs" />
+    <Compile Include="Behaviors\RunningRightAnimation.cs" />
+    <Compile Include="ComponentManager.cs" />
+    <Compile Include="Components\Implementations\Player.cs" />
+    <Compile Include="Handlers\CameraHandler.cs" />
+    <Compile Include="Handlers\InputHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\InGameDebugger.cs" />
     <Compile Include="VauxGame.cs" />
     <Compile Include="Subjects\ComponentSubject.cs" />
     <Compile Include="Components\IDrawable.cs" />
@@ -67,6 +85,7 @@
     <Compile Include="Components\Implementations\WorldComponent.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Icon.png" />
     <None Include="packages.config" />
   </ItemGroup>
@@ -83,5 +102,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\VauxGame.Core.Infrastructure\VauxGame.Core.Infrastructure.csproj">
+      <Project>{f36e41a2-ba7d-4367-bb9b-a0e700b4b01b}</Project>
+      <Name>VauxGame.Core.Infrastructure</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
